# Calyx

./: .gitignore  .gitleaksignore  CALYX_COMPLETE_DOCUMENTATION.md  Cargo.toml  FORK-HANDOVER.md  README.md
crates/calyx-anneal/: Cargo.toml
crates/calyx-anneal/src/: budget.rs  integration_fsv.rs  ledger_anneal.rs  lib.rs  rollback.rs  tripwire.rs
crates/calyx-anneal/tests/: ab_runner.rs  artifact_shadow.rs  bandit.rs  budget.rs  budget_fsv.rs  candidate_synth.rs  degrade.rs  differentiation_gate.rs  frozen_guard.rs  frozen_guard_fsv.rs  fsv_soak.rs  growth_curve.rs  issue1246_online_learning_fsv.rs  issue1369_online_head_contract_fsv.rs  issue486_janitor_fsv.rs  issue791_conversion_flywheel_fsv.rs  ledger_anneal.rs  mistake_log.rs  online_head.rs  online_head_fsv.rs  operator_synth.rs  operator_synth_fsv.rs  propose_lens.rs  rebuild.rs  rebuild_fsv.rs  recalibrate_fsv.rs  record_outcome.rs  recurrence_schedule.rs  regression_assert.rs  regression_assert_fsv.rs  regression_guard.rs  replay_buffer.rs  replay_buffer_fsv.rs  restore.rs  rollback.rs  rollback_fsv.rs  shadow.rs  shadow_fsv.rs  soak_harness.rs  triggers.rs  (+1 more)
crates/calyx-assay/: Cargo.toml
crates/calyx-assay/src/: categorical_association.rs  causal_pc.rs  ccm.rs  conditional_mi.rs  copula.rs  cross_correlation.rs  dependence_dispatch.rs  distance_correlation.rs  ensemble.rs  estimate.rs  granger.rs  hawkes.rs  hsic.rs  ksg.rs  ksg_tests.rs  lib.rs  logistic.rs  mic.rs  mmd.rs  nmi.rs  partial_correlation.rs  partial_network.rs  point_process.rs  rank_correlation.rs  store.rs  sufficiency.rs  total_correlation.rs  transfer_entropy.rs
crates/calyx-assay/tests/: __calyx_integration_isolated_issue1508_dependence_cuda.rs  advanced_math_fsv.rs  assay_trust_fsv.rs  aster_materialization_gate_fsv.rs  bootstrap_ci_fsv.rs  drift_mmd_fsv.rs  formula_coverage_fsv.rs  issue1312_tc_subsample_fsv.rs  issue1313_pc_stable_fsv.rs  issue1313_pc_stable_order_tests.rs  issue1508_dependence_cuda.rs  periodicity_fsv.rs  ph42_exit_gate_fsv.rs  ph52_bayesian_tests.rs  ph52_total_correlation_tests.rs  ph52_transfer_entropy_tests.rs  power_gate_fsv.rs  rank_correlation_fsv.rs  real_labeled_classification_fsv.rs  recurrence_anchor.rs  recurrence_anchor_fsv.rs  recurrence_hazard_fsv.rs  stage5_fsv.rs
crates/calyx-aster/: Cargo.toml
crates/calyx-aster/examples/: issue1856_atomic_answer_fsv.rs
crates/calyx-aster/src/: cuda_olap.rs  erase.rs  ledger_head.rs  ledger_view.rs  lib.rs  pressure.rs  vault.rs  verify_restore.rs
crates/calyx-aster/tests/: btree_query_fsv.rs  durable_manifest_assets.rs  inverted_index_fsv.rs  leapable_issue1977_durability_fsv.rs  ph58_tombstone_perf_gate.rs  soak_ph56.rs
crates/calyx-buildinfo/: Cargo.toml
crates/calyx-buildinfo/src/: lib.rs  tests.rs
crates/calyx-cli/: Cargo.toml
crates/calyx-cli/src/: a35_signal.rs  a37_admission_store.rs  anneal_frozen_guard_readback.rs  anneal_lens_proposal_log.rs  anneal_propose_lens_fixture.rs  anneal_replay_readback.rs  assay_anchor_audit.rs  assay_bits_validation.rs  assay_corpus_build.rs  assay_ensemble_card.rs  assay_fbin_export.rs  assay_fbin_export_tests.rs  assay_i8bin_ensemble_card.rs  assay_multi_anchor_card.rs  assay_stream_fbin.rs  assay_verdict_metadata.rs  capabilities.rs  cf_read.rs  crash.rs  dedup_audit_readback.rs  dispatch.rs  durable_write.rs  error.rs  fsv_grounding.rs  fsv_vault_health.rs  fsv_vault_health_grounding.rs  fsv_vault_health_marker.rs  fsv_vault_health_tests.rs  healthcheck.rs  healthcheck_tests.rs  main.rs  manifest_readback.rs  media_derived_text.rs  media_derived_text_tests.rs  oracle_sufficiency_validation.rs  panel_commands.rs  partitioned_bench.rs  partitioned_bench_tests.rs  partitioned_manifest_readback.rs  partitioned_rrf_report_store.rs  (+6 more)
crates/calyx-cli/tests/: __calyx_integration_isolated_ingest_resident_discovery_fsv.rs  __calyx_integration_isolated_ingest_resident_service_fsv.rs  __calyx_integration_isolated_ingest_resident_worker_fsv.rs  __calyx_integration_isolated_issue918_search_provenance.rs  __calyx_integration_isolated_ph62_workflow_healthcheck.rs  __calyx_integration_isolated_search_resident_service_fsv.rs  __calyx_integration_isolated_verify_chain.rs  __calyx_integration_process_0.rs  __calyx_integration_process_1.rs  __calyx_integration_process_2.rs  __calyx_integration_suite_0.rs  audit_cli.rs  audit_cli_hardening.rs  checkpoint_scan.rs  cli_error_emit_fsv.rs  compact_cli_recovery.rs  compression_report_readback.rs  cx_list_include_slots_readback.rs  dedup_anchor_conflict_readback.rs  dedup_audit_readback.rs  dedup_check_readback.rs  dedup_rolled_undo_readback.rs  ingest_resident_discovery_fsv.rs  ingest_resident_service_fsv.rs  ingest_resident_worker_fsv.rs  issue1108_build_info_fsv.rs  issue1243_grounded_summary_replay_fsv.rs  issue1513_mcp_cli_web_parity_fsv.rs  issue757_summarize_cli.rs  issue918_search_provenance.rs  living_concert_fsv.rs  manifest_readback_show_manifest_fsv.rs  merkle_vault.rs  ph36_fsv_integration.rs  ph62_workflow_healthcheck.rs  readme_assets_contract.rs  search_resident_service_fsv.rs  timetravel_readback_fsv.rs  verify_chain.rs  verify_chain_physical.rs
crates/calyx-gatebrokerd/: Cargo.toml
crates/calyx-gatebrokerd/src/: accounts.rs  broker_error.rs  config.rs  exec_root.rs  fs_tx.rs  ids.rs  journal.rs  lib.rs  logging.rs  pidfd.rs  protocol.rs  systemd.rs  transport.rs
crates/calyx-gatebrokerd/tests/: __calyx_integration_platform_0.rs  __calyx_integration_suite_0.rs  fs_tx_real.rs  gatectl_fd_real.rs  journal_real.rs  protocol_config.rs  systemd_real.rs  verify_config_real.rs
crates/calyx-hazard-soak/: Cargo.toml
crates/calyx-leapable/: Cargo.toml  build.rs
crates/calyx-lodestar/: Cargo.toml
crates/calyx-mcp/: Cargo.toml
crates/calyx-mincut/: Cargo.toml
crates/calyx-paths/: Cargo.toml
crates/calyx-poly/: Cargo.toml  README.md
crates/calyx-search/: Cargo.toml
crates/calyx-series/: Cargo.toml
crates/calyx-sextant/: Cargo.toml  build.rs
crates/calyx-testkit/: Cargo.toml
crates/calyx-web-api/: Cargo.toml
crates/calyxd/: Cargo.toml  build.rs
(+1486 files in other folders)
