[package]
name = "calyx-anneal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
calyx-assay = { path = "../calyx-assay" }
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-registry = { path = "../calyx-registry" }
blake3.workspace = true
ciborium.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
zstd.workspace = true

[dev-dependencies]
calyx-fsv = { path = "../calyx-fsv" }
calyx-testkit = { path = "../calyx-testkit" }
filetime.workspace = true
proptest.workspace = true
