[package]
name = "calyx-assay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-loom = { path = "../calyx-loom" }
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
calyx-anneal = { path = "../calyx-anneal" }
calyx-fsv = { path = "../calyx-fsv" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-lodestar = { path = "../calyx-lodestar" }
calyx-mincut = { path = "../calyx-mincut" }
calyx-oracle = { path = "../calyx-oracle" }
calyx-paths = { path = "../calyx-paths" }
calyx-sextant = { path = "../calyx-sextant" }
calyx-ward = { path = "../calyx-ward" }
proptest.workspace = true
