[package]
name = "calyx-buildinfo"
description = "Embedded build identity (git SHA, dirty flag, build time) for deployed Calyx binaries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
