[package]
autotests = false
name = "calyx-gatebrokerd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "calyx_gatebrokerd"
path = "src/lib.rs"

[dependencies]
blake3.workspace = true
libc = "0.2"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
toml.workspace = true

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_platform_0"
path = "tests/__calyx_integration_platform_0.rs"

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

# END generated integration harnesses (issue #1546)
