[package]
name = "calyx-hazard-soak"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "calyx-hazard-soak"
path = "src/main.rs"

[dependencies]
calyx-anneal = { path = "../calyx-anneal" }
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge" }
calyx-fsv = { path = "../calyx-fsv" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-registry = { path = "../calyx-registry" }
calyx-sextant = { path = "../calyx-sextant" }
calyxd = { path = "../calyxd" }
blake3.workspace = true
rand = { workspace = true, features = ["small_rng"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench_hazard_soak_throughput"
harness = false

[features]
cuda = ["calyx-forge/cuda"]
