[package]
name = "calyx-leapable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "calyx-leapable"
path = "src/main.rs"

[build-dependencies]
calyx-buildinfo = { path = "../calyx-buildinfo" }

[dependencies]
blake3 = { workspace = true }
calyx-aster = { path = "../calyx-aster" }
calyx-buildinfo = { path = "../calyx-buildinfo" }
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-mcp = { path = "../calyx-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
