[package]
autotests = false
name = "calyx-leapable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "calyx-leapable"
path = "src/main.rs"

[build-dependencies]
calyx-buildinfo = { path = "../calyx-buildinfo" }

[dependencies]
blake3 = { workspace = true }
calyx-aster = { path = "../calyx-aster" }
calyx-buildinfo = { path = "../calyx-buildinfo" }
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-mcp = { path = "../calyx-mcp" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_isolated_cx"
path = "tests/__calyx_integration_isolated_cx.rs"

[[test]]
name = "__calyx_integration_isolated_stdio"
path = "tests/__calyx_integration_isolated_stdio.rs"

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

# END generated integration harnesses (issue #1546)
