[package]
name = "calyx-lodestar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[features]
fsv = []

[dependencies]
blake3.workspace = true
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-loom = { path = "../calyx-loom" }
calyx-mincut = { path = "../calyx-mincut" }
calyx-paths = { path = "../calyx-paths" }
calyx-sextant = { path = "../calyx-sextant" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
calyx-forge = { path = "../calyx-forge" }
calyx-fsv = { path = "../calyx-fsv" }
calyx-ward = { path = "../calyx-ward" }
proptest.workspace = true
serde_json.workspace = true
