[package]
name = "calyx-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "calyx-mcp"
path = "src/main.rs"

[dependencies]
calyx-anneal = { path = "../calyx-anneal" }
calyx-assay = { path = "../calyx-assay" }
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-loom = { path = "../calyx-loom" }
calyx-paths = { path = "../calyx-paths" }
calyx-registry = { path = "../calyx-registry" }
calyx-sextant = { path = "../calyx-sextant" }
calyx-ward = { path = "../calyx-ward" }
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ulid.workspace = true

[dev-dependencies]
calyx-fsv = { path = "../calyx-fsv" }
