[package]
autotests = false
name = "calyx-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
cuda = [
    "calyx-aster/cuda",
    "calyx-forge/cuda",
    "calyx-registry/cuda",
    "calyx-search/cuda",
    "calyx-sextant/cuda",
]

[[bin]]
name = "calyx-mcp"
path = "src/main.rs"

[build-dependencies]
calyx-buildinfo = { path = "../calyx-buildinfo" }

[dependencies]
calyx-anneal = { path = "../calyx-anneal" }
calyx-buildinfo = { path = "../calyx-buildinfo" }
calyx-assay = { path = "../calyx-assay" }
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-loom = { path = "../calyx-loom" }
calyx-paths = { path = "../calyx-paths" }
calyx-registry = { path = "../calyx-registry" }
calyx-search = { path = "../calyx-search" }
calyx-sextant = { path = "../calyx-sextant" }
calyx-ward = { path = "../calyx-ward" }
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ulid.workspace = true

[dev-dependencies]
calyx-fsv = { path = "../calyx-fsv" }

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_isolated_stdio"
path = "tests/__calyx_integration_isolated_stdio.rs"

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

# END generated integration harnesses (issue #1546)
