[package]
name = "calyx-paths"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
calyx-core = { path = "../calyx-core" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
calyx-fsv = { path = "../calyx-fsv" }
proptest.workspace = true
serde_json.workspace = true
