[package]
autotests = false
name = "calyx-poly"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
description = "Local Polymarket forecasting engine built on the Calyx association-native database"

[features]
default = []
cuda = ["calyx-loom/cuda", "calyx-sextant/cuda"]

[dependencies]
calyx-aster = { path = "../calyx-aster" }
calyx-anneal = { path = "../calyx-anneal" }
calyx-assay = { path = "../calyx-assay" }
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-lodestar = { path = "../calyx-lodestar" }
calyx-loom = { path = "../calyx-loom" }
calyx-mincut = { path = "../calyx-mincut" }
calyx-oracle = { path = "../calyx-oracle" }
calyx-paths = { path = "../calyx-paths" }
calyx-registry = { path = "../calyx-registry" }
calyx-sextant = { path = "../calyx-sextant" }
calyx-ward = { path = "../calyx-ward" }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tungstenite = { workspace = true }
ureq = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
calyx-fsv = { path = "../calyx-fsv" }
rand = { workspace = true }
rand_chacha = { workspace = true }

[[test]]
name = "issue1523_cuda_exact_knn_fsv"
path = "tests/issue1523_cuda_exact_knn_fsv.rs"

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_isolated_issue034_kalshi_external_feed_fsv"
path = "tests/__calyx_integration_isolated_issue034_kalshi_external_feed_fsv.rs"

[[test]]
name = "__calyx_integration_isolated_issue045_capability_gate_fsv"
path = "tests/__calyx_integration_isolated_issue045_capability_gate_fsv.rs"

[[test]]
name = "__calyx_integration_isolated_issue047_encoder_properties_fsv"
path = "tests/__calyx_integration_isolated_issue047_encoder_properties_fsv.rs"

[[test]]
name = "__calyx_integration_isolated_issue051_temporal_graph_edges_fsv"
path = "tests/__calyx_integration_isolated_issue051_temporal_graph_edges_fsv.rs"

[[test]]
name = "__calyx_integration_isolated_issue052_flow_price_transfer_entropy_fsv"
path = "tests/__calyx_integration_isolated_issue052_flow_price_transfer_entropy_fsv.rs"

[[test]]
name = "__calyx_integration_process_0"
path = "tests/__calyx_integration_process_0.rs"

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

[[test]]
name = "__calyx_integration_suite_1"
path = "tests/__calyx_integration_suite_1.rs"

# END generated integration harnesses (issue #1546)
