[package]
name = "calyxd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "calyxd"
path = "src/main.rs"

[dependencies]
calyx-aster = { path = "../calyx-aster" }
calyx-assay = { path = "../calyx-assay" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge" }
calyx-lodestar = { path = "../calyx-lodestar" }
calyx-loom = { path = "../calyx-loom" }
calyx-mcp = { path = "../calyx-mcp" }
calyx-oracle = { path = "../calyx-oracle" }
calyx-ward = { path = "../calyx-ward" }
nvml-wrapper = { workspace = true }
calyx-ledger = { path = "../calyx-ledger" }
prometheus.workspace = true
rustls = "0.23.40"
rustls-pki-types = "1.14.1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
calyx-fsv = { path = "../calyx-fsv" }
blake3.workspace = true
rcgen = "0.14.8"

[features]
default = []
# Enables the real CUDA preflight probe (calyx-forge CUDA path). Build with
# --features cuda on a GPU host; without it, server mode fails loud at startup.
cuda = ["calyx-forge/cuda"]
